# Noobs-Compressor

./: .gitignore  Aes-Heffman-zip.doc  Instructions.md  LICENSE  README.en.md  README.md  Secure Files Compressor.code-workspace  plan.md  readme_UserGuide.txt  recover_files.sh  开发日志.md  开发流程.md  策划.md  项目说明.md
CompressionModules/Huffman/include/: heffman.h
CompressionModules/Huffman/src/: bitio.cpp  collectchar.cpp  fileopen.cpp  heffman.cpp  main.cpp  translate.cpp
CompressionModules/heffman/include/: DoDecode.h  DoEncode.h  GenHeffcodeTab.h  GetFreq.h  Heffman.h  HuffmanCompression.h  LoadHeffcodeTab.h
CompressionModules/heffman/src/: DoDecode.cpp  DoEncode.cpp  GenHeffcodeTab.cpp  GetFreq.cpp  GetFreq.hpp  Heffman.cpp  LoadHeffcodeTab.cpp  test_workflow.cpp
CompressionModules/heffman/test/: CMakeLists.txt
CompressionModules/hefftype/: Heffman_type.cpp  Heffman_type.h
CompressorFileSystem/DataCommunication/include/: BinaryIO.h  BinaryIO_Loader.h  BinaryIO_Writer.h  BinaryStandardLoader.h  BinaryStandardWriter.h  DataExporter.h  DataLoader.h  Directory_FileDetails.h  Directory_FileParser.h  Directory_FileProcessor.h  EncodingUtils.h  EntryDetails.h  EntryParser.h  EntryProcessor.h  FileLibrary.h  HeaderLoader.h  HeaderWriter.h  ICompression.h  IEncryption.h  NullCompression.h  NullEncryption.h  StrategyFactory.h  ToolClasses.h
CompressorFileSystem/DataCommunication/src/: BinaryIO.cpp  BinaryIO_Loader.cpp  BinaryIO_Writer.cpp  BinaryStandardLoader.cpp  BinaryStandardWriter.cpp  DataExporter.cpp  DataLoader.cpp  Directory_FileParser.cpp  Directory_FileProcessor.cpp  EncodingUtils.cpp  EntryParser.cpp  EntryProcessor.cpp  HeaderLoader.cpp  HeaderWriter.cpp  NullCompression.cpp  StrategyFactory.cpp  ToolClasses.cpp
CompresssionModules/heffman/include/: Heffman.h
CompresssionModules/heffman/src/: Heffman.cpp
DataBlocks/: DataBlocks.cpp  DataBlocks.h  DataBlocksManage.cpp  DataBlocksManage.h
DataBlocks/include/: HefftabBlock.h
DataBlocks/src/: HefftabBlock.cpp
DataStream/DataCommunication/: 循环依赖问题.html
DataStream/DataCommunication/include/: DataExporter.h  DataExporter.hpp  DataLoader.h  DataLoader.hpp  DirectoryReader.h  Directory_FileDetails.h  Directory_FileProcessor.h  FileDetails.h  FileLibrary.h  FileQueue.h  HeaderBlockIterator.hpp  HeaderLoader.h  HeaderReader.h  HeaderWriter.h  Parser.hpp  ToolClasses.h  ToolClasses.hpp  Transfer.h
DataStream/DataCommunication/src/: DataExporter.cpp  DataLoader.cpp  DirectoryReader.cpp  Directory_FileParser.cpp  Directory_FileProcessor.cpp  HeaderBlockIterator.cpp  HeaderLoader.cpp  HeaderReader.cpp  HeaderWriter.cpp  ToolClasses.cpp  main.cpp
DevelopmentMarkdowns/: 开发日志.md  开发流程与设计细节.md
EncryptionModules/Aes/include/: Aes.h  AesEncryption.h  My_Aes.h
EncryptionModules/Aes/src/: AesFunctions.cpp  main.cpp  mainCircle.cpp
Git_Recovery/: file_f9bb4e2b4d5e367705cde7e6396442956da906f9
Schedule/: Scheduler.cpp  Scheduler.h
Schedule/include/: DataConnector.h  Datacmnctor.h  Strategy.h  Worker.h
ThreadPool/: MonitorTaskQueue.h  MonitorTaskQueue.hpp  ThreadPool.h  _Thread.h
ThreadPool/src/: MonitorTaskQueue.cpp  ThreadPool.cpp  _Thread.cpp
Y_Manager/: .vscode Y_Manager目录下 需要一定的环境配置.rar  CMakeLists.txt  CompressionLoop.cpp  CompressionLoop.h  DecompressionLoop.cpp  DecompressionLoop.h  IconHandler.cpp  IconHandler.h  MainLoop.cpp  MainLoop.h  app.rc  build.ps1  compare_hashes.ps1  find_diff.ps1  main.cpp  test_small_file.cpp  vscode.rar
Y_Manager/.claude/: settings.local.json
Y_Manager/.github/: copilot-instructions.md
Y_Manager_GUI/: CMakeLists.txt  IconHandler.cpp  app.rc  resources.qrc
Y_Manager_GUI/src/: CompressionWorker.cpp  CompressionWorker.h  MainWindow.cpp  MainWindow.h  main.cpp
Y_Manager_GUI/translations/: SimpleFilesCompressorGUI_zh_CN.qm  SimpleFilesCompressorGUI_zh_CN.ts
include/: Aes.h
namespace/: namespace_sfc.h
src/: Aes.cpp  AesFunctions.cpp  main.cpp  mainCircle.cpp
